--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tk-portfolio",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://temitayokuyoro.github.io/portfolio/",
